src/objects/Account_Role__c.object
<CustomObject>
    <description>Used to extend the role of any existing account type e.g. an airline that also acts as a payment provider. A record type should be created for each type of account role required.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role_Name__c</fullName>
        <description>A functional role that an Account may assume when interacting with an IATA Salesforce functional capability. This designation technically supports the provisioning of IATA Salesforce functional capabilities.

The Account Role record should be named after the functional capability for which the record applies. If required, Account related data, within the context of the functional capability, could be held on a related Account Role Detail record.</description>
        <inlineHelpText>Account Role Name to fill accordingly to the application using the record</inlineHelpText>
        <label>Account Role Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Roles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Roles</label>
        <referenceTo>Account_Roles__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account Id to account record</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Any_Other_Information__c</fullName>
        <description>Enter any additional information related to your company (e.g. to comply with AML requirements)</description>
        <inlineHelpText>Enter any additional information related to your company (e.g. to comply with AML requirements)</inlineHelpText>
        <label>Any Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayAccount_FunctionalRole__c</fullName>
        <description>Concatenation of the account name and functional role, it is used to display a secondary field when the user is looking for an account role in a lookup field.</description>
        <formula>Account__r.Name &amp;&quot; &quot;&amp; TEXT(Functional_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account and Functional Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_From_Date__c</fullName>
        <description>Account role becomes active from this date</description>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To_Date__c</fullName>
        <description>Account role becomes inactive after this date.</description>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <description>Status used in the flow &quot;Full Customer Creation&quot;, identify if the account has started the flow (pending status) and finished the flow (completed status)</description>
        <label>Flow status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <description>Business context this detailed role will be related to</description>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Functional_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GADM_Unique_Key__c</fullName>
        <label>GADM Unique Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <displayFormat>aB5{0000000000}</displayFormat>
        <label>Global ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HQ_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the country where provider&apos;s headquarter is located</description>
        <inlineHelpText>Select the country where provider&apos;s headquarter is located</inlineHelpText>
        <label>HQ Location</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <description>Date of the last review.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OJT_File_Id__c</fullName>
        <description>id of the latestePublishedversion of the file</description>
        <label>OJT File Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OJT_file__c</fullName>
        <label>OJT file</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OJT_file_validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OJT file validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Count__c</fullName>
        <description>Roll-up field that count how many primary contacts are related with the account role.</description>
        <label>Primary Contact Count</label>
        <summaryFilterItems>
            <field>Account_Contact_Role__c.is_primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Contact_Role__c.Account_Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Provider_Code__c</fullName>
        <description>Code that identified the provider.</description>
        <label>Provider Code</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <description>Provider type picklist. Can assume Open Loop or Close Loop values.</description>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TIP_Provider_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Satus of account role record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>used to uniquely identify a record in upsert. For TIP, is the concatenation of Account__c and RecordTypeID
DEPRECATED ... UNIQUE IS SET TO FALSE TO ENABLE ACCOUNT ROLE RECORDS TO BE CREATED FOR DIFFERENT ACCOUNTS OF SAME RECORD TYPES</description>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Account Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Startup_Hotlist</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Role__c</field>
            <operation>equals</operation>
            <value>Startup Hotlist</value>
        </filters>
        <label>Startup Hotlist</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Roles</pluralLabel>
    <recordTypes>
        <fullName>Amsterdam_Publications</fullName>
        <active>true</active>
        <description>For records migrated and synchronized with Amsterdam Publications system.</description>
        <label>Amsterdam Publications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>IFTP</fullName>
        <active>true</active>
        <label>IFTP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Master recordType</description>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>TIP_Payment_Provider</fullName>
        <active>true</active>
        <label>Payment Provider</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Effective_Start_Date_on_Payment_Provider</fullName>
        <active>true</active>
        <description>Effective From Date is mandatory for Payment Provider</description>
        <errorConditionFormula>AND(RecordType.DeveloperName=&quot;TIP_Payment_Provider&quot;, ISBLANK(Effective_From_Date__c), text(Status__c )=&quot;Active&quot;)</errorConditionFormula>
        <errorDisplayField>Effective_From_Date__c</errorDisplayField>
        <errorMessage>Effective From Date is mandatory for Payment Provider</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	!(ISBLANK(TEXT(Status__c))), 
	Primary_Contact_Count__c == 0,
	RecordType.DeveloperName=&quot;TIP_Payment_Provider&quot;
)</errorConditionFormula>
        <errorMessage>Please first save without the Effective From Date, ensure that a Primary Contact is identified (Account Contact Role), and only then enter the Effective From Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TIP_HR_LOCATION_NOT_EMPTY</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &quot;&quot;)),ISBLANK(HQ_Location__c), RecordType.DeveloperName=&quot;TIP_Payment_Provider&quot;)</errorConditionFormula>
        <errorDisplayField>HQ_Location__c</errorDisplayField>
        <errorMessage>HR Location is mandatory for payment providers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TIP_PROVIDER_CODE_LENGTH</fullName>
        <active>true</active>
        <description>For record-type payment provider, Code is mandatory and its length must be 4 digits</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &quot;&quot;)), RecordType.DeveloperName=&quot;TIP_Payment_Provider&quot;, LEN( Provider_Code__c ) != 4)</errorConditionFormula>
        <errorDisplayField>Provider_Code__c</errorDisplayField>
        <errorMessage>Invalid Provider Code. The Provider Code must contain exactly 4 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TIP_Payment_Provider_expiration_dates</fullName>
        <active>true</active>
        <description>Effective To Date needs to be after Effective From Date</description>
        <errorConditionFormula>AND(RecordType.DeveloperName=&quot;TIP_Payment_Provider&quot;,  Effective_From_Date__c &gt; Effective_To_Date__c )</errorConditionFormula>
        <errorDisplayField>Effective_To_Date__c</errorDisplayField>
        <errorMessage>Effective To Date needs to be greater then Effective From Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Providers_Accreditation_Date</fullName>
        <active>false</active>
        <description>Can’t have active Payment Providers with Effective date From in the future</description>
        <errorConditionFormula>AND(RecordType.DeveloperName=&quot;TIP_Payment_Provider&quot;, TEXT(Status__c)=&quot;Active&quot;, Effective_From_Date__c&gt;Today())</errorConditionFormula>
        <errorMessage>Can’t have active Payment Providers with Effective date From in the future</errorMessage>
    </validationRules>
</CustomObject>